--- a/templates/register.html
+++ b/templates/register.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
- <title>Register</title>
- <link rel="stylesheet" href="/static/style.css">
-
+    <title>Register</title>
+    <link rel="stylesheet" href="/static/style.css">
 </head>
 <body>
- <h2>Register</h2>
- <form id="registerForm">
-   <input type="text" id="registerName" placeholder="Name" required><br>
-   <input type="email" id="registerEmail" placeholder="Email" required><br>
-   <input type="password" id="registerPassword" placeholder="Password" required><br>
-   <button type="submit">Register</button>
- </form>
- <p>Already have an account? <a href="/">Login</a></p>
- <script src="/static/script.js"></script>
+    <div class="container">
+        <h2>Register</h2>
+        <form id="registerForm">
+            <input type="text" id="registerName" placeholder="Name" required><br>
+            <input type="email" id="registerEmail" placeholder="Email" required><br>
+            <input type="password" id="registerPassword" placeholder="Password" required><br>
+            <button type="submit">Register</button>
+        </form>
+        <p>Already have an account? <a href="/">Login</a></p>
+    </div>
+    <script src="/static/script.js"></script>
 </body>
 </html>
